...
                          color: Theme.of(context).colorScheme.primary,
                        ),
                        SizedBox(height: mediumSpacing),

                        // Title
                        Text(
                          key: const Key('magic_link_sent_message'),
                          l10n.checkYourEmail,
                          style: Theme.of(context).textTheme.headlineMedium
                              ?.copyWith(fontSize: isCompactScreen ? 22 : null),
                          textAlign: TextAlign.center,
                        ),
                        SizedBox(height: smallSpacing),
...
